--- a/index.css
+++ b/index.css
@@ -10,6 +10,13 @@ h1 {
     font-family: 'Poppins', sans-serif;
 }
 
+h4 {
+    font-size: 0.9rem;
+    margin: 0;
+    color: rgb(250, 235, 215);
+    font-family: 'Poppins', sans-serif;
+    font-weight: 200;
+}
 .credit {
     color: rgba(250, 235, 215, 0.158);
 }
